# git_article

./: main.py  my_first_file.txt  pyproject.toml
src/: coca_cola.txt  receipt.py  text_processing_practice.py
src/scratch/: scratch.py
